syntax = "proto3";

package yarrow;


message Array1Dbool {
    repeated bool data = 1;
}
message Array1Di64 {
    repeated int64 data = 1;
}
message Array1Df64 {
    repeated double data = 1;
}
message Array1Dstr {
    repeated string data = 1;
}
message HashmapString {
    map<string, Value> data = 1;
}

message Array1D {
    oneof data {
        Array1Dbool bool = 1;
        Array1Di64 i64 = 2;
        Array1Df64 f64 = 3;
        Array1Dstr string = 4;
    }
}

message ArrayND {
    Array1D flattened = 1;
    
    // length of axes
    repeated uint64 shape = 2;
    // order of axes
    repeated uint64 order = 3;
}

message Value {
    oneof data {
        // bytes bytes = 1;
        ArrayND arrayND = 2;
        HashmapString hashmapString = 3;
    }
}

message PrivacyUsage {  

    message DistancePure {
        double epsilon = 1;
    }
    message DistanceApproximate {
        double epsilon = 1;
        double delta = 2;
    }
    oneof usage {
        DistancePure distance_pure = 1;
        DistanceApproximate distance_approximate = 2;
    }
}